@@ -19,6 +19,10 @@
   when there are no methods to analyse in that specific class.
 - Bugfix: The file service can now read the bottom of file more
   reliably.
+- Bugfix: Prevent code generation for explicitly forbidden paths,
+  when the recursion resolving is copying the original analysis
+  into the forbidden path (try to say this fast and 4 times in a
+  row).
 
 2.4.0
 - Added the method analysis to the recursion detection, to prevent
